sumo/tests/traci/VariableRetrieval/Vehicle/errors/UnsupportedVariable/testclient_out.traci
TraCITestClient output file. Date: Mon Apr 19 09:29:54 2010


-> Command sent: <SimulationStep>:
  TargetTime=5.00 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <GetVariable>:
  domID=164 varID=255 objID=dummy
.. Answered with error to command (164), [description: Get Vehicle Variable: unsupported variable specified]

-> Command sent: <SimulationStep>:
  TargetTime=6.00 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
